# smart-fridge-api

./: .env_template  Cargo.toml  diesel.toml
migrations/: init.setup.sql
src/: main.rs  models.rs  schema.rs
src/common/: mod.rs
src/common/controller/: mod.rs  recipe_controller.rs  recipe_gateway.rs
src/common/errors/: service_error.rs
src/common/param/: id_param.rs  mod.rs
src/common/service/: fat_secret_service.rs  mod.rs  open_food_facts_service.rs
src/common/traits/: controller.rs
src/item/controller/: crud.rs  gateway.rs  item_controller.rs  item_gateway.rs  mod.rs
src/item/controller/structs/: items_filter.rs  mod.rs
src/item/service/: crud.rs  item_service.rs
src/models/: fridge.rs  fridge_item_link.rs  home.rs  home_fridge_link.rs  item.rs  item_fridge_link.rs  item_home_link.rs  item_type.rs  item_type_home_link.rs  user.rs  user_home_link.rs
