[package]
name = "smart-fridge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-actors = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
dotenv = "0.15.0"
tokio = { version = "1.41.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
env_logger = "0.11.5"
log = "0.4.22"
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
r2d2 = "0.8.10"
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }

